# UPB-SDA

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  check.sh  cpplint.py  data.json  data_1.json  data_2.json  data_3.json  profile.sh  sfl  test.in  test.in.tmp  test.sh  test.txt  test_all.sh  test_specific.sh
check_utils/: checks.py
cs/: checkpatch.pl
cs/tests/: 11-FUNCTION_SIGNATURE_MULTIPLE_LINES.c
in/: test.in  test14.in
ref/: test11.ref  test14.ref  test15.ref  test18.ref  test26.ref  test27.ref  test28.ref
src/: cache.c  feed.c  friends.c  friends.h  hash_map.c  heap.c  linked_list.c  load_balancer.c  lru_cache.c  main.c  posts.c  posts.h  queue.c  replication.c  server.c  social_media.c  state_manager.c  state_manager.h  string_utils.c  utils.c
src/api/: cache.h  constants.h  hash_map.h  heap.h  linked_list.h  load_balancer.h  lru_cache.h  queue.h  replication.h  server.h  state_manager.h  string_utils.h  utils.h
src/backend/: cache.c  cache.h  database.c  database.h  document.c  document.h  load_balancer.c  load_balancer.h  replication.c  replication.h  server.c  server.h
src/generic/: double_linked_list.c  double_linked_list.h  graph.c  graph.h  hash_map.c  hash_map.h  linked_list.c  linked_list.h  mem_alloc_check.h  queue.c  queue.h  stack.c  stack.h
src/task1/: double_linked_list.c  double_linked_list.h  friends.c  friends.h  graph.c  queue.c  queue.h  stack.c  stack.h
src/task2/: database.c  database.h  post.c  post.h  task2.c  task2.h
src/task3/: feed.c  feed.h
src/utils/: constants.h  debug.c  debug.h  users.c  users.h  (+2 more)
(+54 files in other folders)
